--- a/examples/WioTerminal_TinyML_4_Weather_Prediction/weather_prediction_final.ipynb
+++ b/examples/WioTerminal_TinyML_4_Weather_Prediction/weather_prediction_final.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "weather-prediction_final.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "mount_file_id": "1wxj-W_qvLkRcg5OfxAmkef96SzYYTwHs",
+      "authorship_tag": "ABX9TyP0DibkrgF0bJdmHbyyAfEP",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AIWintermuteAI/Seeed_Arduino_Sketchbook/blob/master/examples/WioTerminal_TinyML_4_Weather_Prediction/weather_prediction_final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
